config/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oadp-default-deny-labelled
  labels:
    app.kubernetes.io/name: oadp-networkpolicy
    app.kubernetes.io/component: network-security
    app.kubernetes.io/part-of: oadp-operator
    app.kubernetes.io/managed-by: olm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: "oadp-operator"
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 8085
    - protocol: TCP
      port: 8443
  - ports:
    - protocol: TCP
      port: 9443
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
      - namespaceSelector:
          matchLabels:
            # This label is standard on the openshift-dns namespace
            kubernetes.io/metadata.name: openshift-dns
      ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
      ports:
      - protocol: TCP
        port: 443
